--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,7 +89,7 @@
     </head>
 
     <body>
-        <h1>Lixto Todo List - Made using Node</h1>
+        <h1>Lixto Todo List - Made using Node Mahesh</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
