--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -89,7 +89,7 @@
     </head>
 
     <body>
-        <h1>Lixto Todo List - Made By Mahesh using Node with the help of Shubham sir </h1>
+        <h1>Lixto Todo List - Made By Mahesh using Node with the help of Shubham Londe sir </h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
